@@ -5,6 +5,7 @@ Sigil 0.7.1 TBD
     - Implement issue 2009: Add semantic tags to filenames in reports.
     - Implement issue 2028: Special characters should work in non-html files.
     - Implement issue 2027: Upgrade boost software.
+    - Fix issue 2036: Mark for Index can insert HTML tags into code making it invalid.
     - Fix issue 2041: Preview does not sync cursor after using Sigil for a while.
     - Fix issue 2030: The &#160; character is incorrectly converted to space on open.
     - Fix issue 2035: Index Editor entries with nbsp character don't match text.
